Adds support for docker