@@ -9,26 +9,24 @@ done
 
 SCALA_LIBS=""
 
-TERMINAL_WITH=$(tput cols)
-
 ETC_DIR="$base_dir/etc"
+
+
+#
+# Load poor mans logger ;)
+#
+. `dirname $0`/poor.mans.logger.sh
+
 
 #
 # JVM options:
 #
+if [ -z ${LOMRF_JVM_ARGS+x} ]; then
+  LOMRF_JVM_ARGS="-XX:+DoEscapeAnalysis -XX:+UseFastAccessorMethods -XX:+OptimizeStringConcat -XX:+AggressiveOpts"
+else
+  log_info "User-defined JVM args: $LOMRF_JVM_ARGS"
+fi
 
-VM_ARGS=" -XX:+DoEscapeAnalysis -XX:+UseFastAccessorMethods -XX:+OptimizeStringConcat "
-
-#
-# Architecture dependent JVM options:
-#
-#architecture=`uname -m`
-#if [ $architecture = 'x86_64' ]; then
-#  VM_ARGS=$VM_ARGS" -Xms1g -Xmx4g -XX:+UseCompressedOops -Xss32m "
-#else
-#  VM_ARGS=$VM_ARGS" -Xms2g -Xmx3g -Xss32m "
-#  architecture='x86_32'
-#fi
 
 #
 # Logging configuration
@@ -42,14 +40,16 @@ if [[ -n $LOMRF_DEBUG && $LOMRF_DEBUG -eq 1 ]]; then
 		echo "Cannot find logging configuration file '$ETC_DIR/logback-debug.xml'"
 		exit 1
 	fi
-	echo "Debug output is enabled (LOMRF_DEBUG=1)."
-	echo "Debug output will be stored into the 'debug.log' file."
 
-	VM_ARGS=" -Dlogback.configurationFile=$ETC_DIR/logback-debug.xml "
+	log_warn "Debug output is enabled (LOMRF_DEBUG=1)."
+	log_warn "Debug output will be stored into the 'debug.log' file."
+
+	LOMRF_JVM_ARGS=" -Dlogback.configurationFile=$ETC_DIR/logback-debug.xml "
 else
 	if [ ! -f $ETC_DIR/logback.xml ]; then
-		echo "Cannot find logging configuration file '$ETC_DIR/logback.xml'"
-		exit 1
+		exit_error "Cannot find logging configuration file '$ETC_DIR/logback.xml'"
 	fi
-  	VM_ARGS=$VM_ARGS" -Dlogback.configurationFile=$ETC_DIR/logback.xml "	
+
+  	LOMRF_JVM_ARGS=" $LOMRF_JVM_ARGS -Dlogback.configurationFile=$ETC_DIR/logback.xml "
 fi
+
